# org.webosports.app.terminal

./: CMakeLists.txt  README.md  appinfo.json  main-desktop.qmlproject  qml.qrc
desktop/: main-desktop.qml  main-desktop.qmlproject
desktop/QMLTermWidget/: QMLTermScrollbar.qml  QMLTermSession.qml  QMLTermWidget.qml  qmldir
qml/: Main.qml  Terminal.qml  TerminalInputArea.qml  main.qml
qml/KeyboardRows/: ExpandableButton.qml  ExpandableKeyboardButton.qml  JsonListModel.qml  KeyboardBar.qml  KeyboardButton.qml  KeyboardRow.qml
qml/KeyboardRows/Layouts/: ControlKeys.json  FunctionKeys.json  Layouts.json  Nano.json  ScrollKeys.json  SimpleCommands.json
src/: main.cpp
